# GraphRag_Developer_Challenge3

./: .gitignore  README.md  compare_rag.md  docker-compose.yml  hnswlib_noderag.py  pyproject.toml
.noderag/: Node_config.yaml  index.html
.noderag/cache/: attributes.parquet  documents.parquet  entities.parquet  graph.pkl  relationship.parquet  semantic_units.parquet  text.parquet
.noderag/info/: document_hash.json  indices.json  state.json
.noderag/input/: 2025-04-27_en.md  2025-05-11_en.md  2025-05-25_en.md  2025_04_13_en.md
AB Testing/: answer_key_long.json  answer_key_samuele.json  answer_key_short.json  answer_key_supplement.json  answer_key_unseen.json  answers_unseen.json  mark_answers.py  questions_long.json  questions_samuele.json  questions_short.json  questions_supplement.json  questions_unseen.json
AB Testing/Output Answers/: answers_20251101_154244.json  answers_20251101_193514.json  answers_20251101_203710.json  answers_20251101_223853.json  answers_20251102_013236.json  answers_20251102_013814.json  answers_20251102_014456.json  answers_20251102_043032.json  answers_20251102_043932.json  answers_20251102_182934.json  answers_20251102_183458.json  answers_20251102_185648.json  answers_20251102_224141.json  answers_20251102_231543.json  answers_20251103_001408.json  answers_20251103_013952.json
AB Testing/Sample Question and Answers/: sample_answers.json  sample_questions.json
AB Testing/Test Results/: test_results_20251101_193618.json  test_results_20251101_203750.json  test_results_20251101_224004.json  test_results_20251101_225007.json  test_results_20251101_230333.json  test_results_20251102_013814.json  test_results_20251102_014456.json  test_results_20251102_014726.json  test_results_20251102_042856.json  test_results_20251102_182934.json  test_results_20251102_183458.json  test_results_20251102_224141.json  test_results_20251102_231543.json  test_results_20251103_001408.json  test_results_20251103_013952.json  test_results_20251103_020531.json  test_results_20251103_042959.json  test_results_20251103_054521.json  test_results_20251103_060029.json
KnowledgeGraph/: __init__.py  chunking.py  chunking_strategy.py  config.py  knowledgegraph.py  normalize.py  pipeline_utils.py
KnowledgeGraph/LightRAG/: __init__.py  lightrag_runner.py  raganything_runner.py
KnowledgeGraph/NodeRag/: README.md  __init__.py  noderag_check.ipynb  (+1 more)
Main Functions/: VectorRAG.ipynb  main.ipynb  main.py  prep.ipynb  prep_experimental.ipynb  prep_lightrag.ipynb  prep_noderag.ipynb  prep_noderag.py
RAG/: AnchorPrimer.py  AnchorUtils.py  CheckSupplement.py  CheckUpdates.py  Citations.py  Extractive.py  GetNeighbor.py  GraphRAG.py  HybridRAG.py  Lucene.py  MMR.py  Reranker.py  UseCatalog.py  VectorRAG.py  __init__.py  batch_query.py  card_catalog.jsonl  cypher_utils.py  normalize.py
Scripts/: CostEstimator.py  CostEstimator_noderag.py  monitor_prep_noderag.py  noderag_graph_stats.py  poetryexport.sh  try_rag.py
(+92 files in other folders)
