[project]
name = "graphrag-developer-challenge3"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "neo4j-graphrag[openai] (>=1.10.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tiktoken (>=0.8.0,<1.0.0)",
    "langchain-neo4j (>=0.6.0,<0.7.0)",
    "langchain (>=1.0.3)",
    "langchainhub (>=0.1.21,<0.2.0)",
    "langchain-openai (>=1.0.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "cohere (>=5.20.0,<6.0.0)",
    "lightrag-hku @ git+https://github.com/HKUDS/LightRAG.git",
    "noderag-patched @ file:///mnt/c/Users/sepeh/OneDrive/Documents/Git/GraphRag_Developer_Challenge3/vendor/NodeRAG",
    "rich (>=13.9.0,<14.0.0)",
    "ruamel-yaml (>=0.18,<0.19)",
    "python-igraph (>=0.11.8,<0.12.0)",
    "pyarrow (>=16.0.0,<17.0.0)",
    "flagembedding (>=1.2.7,<2.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "leidenalg (>=0.10.2,<0.11.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "pyvis (>=0.3.2,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "notebook (>=7.4.7,<8.0.0)"
]

[tool.poetry]
package-mode = false
